Catchup update, sorry...

--- a/evothings/rfglow-ble/www/css/style.css
+++ b/evothings/rfglow-ble/www/css/style.css
@@ -43,6 +43,10 @@
     background-color: #AAAAFF;
 }
 
+.purple {
+    background-color: #800080;
+}
+
 .no-padding {
     padding: 0px !important;
 }
