Some android changes

--- a/android/BladeBLEWear/app/src/main/res/layout/activity_blecontrol.xml
+++ b/android/BladeBLEWear/app/src/main/res/layout/activity_blecontrol.xml
@@ -121,8 +121,8 @@
             android:hapticFeedbackEnabled="true"
             android:src="@drawable/action_item_icon_background"
             android:tag="@color/kb_blue"
-            android:tint="@color/kb_blue"
-            app:backgroundTint="@color/kb_blue"
+            android:tint="@color/grey"
+            app:backgroundTint="@color/grey"
             app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +131,7 @@
             app:rippleColor="@color/white" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/button12"
+            android:id="@+id/button0"
             android:layout_width="wrap_content"
             android:layout_height="39dp"
             android:layout_marginEnd="8dp"
@@ -168,8 +168,8 @@
             app:layout_constraintBottom_toBottomOf="@+id/button3"
             app:layout_constraintEnd_toEndOf="@+id/button3"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/button12"
-            app:layout_constraintTop_toTopOf="@+id/button12"
+            app:layout_constraintStart_toStartOf="@+id/button0"
+            app:layout_constraintTop_toTopOf="@+id/button0"
             app:layout_constraintVertical_bias="0.48000002"
             app:pressedTranslationZ="12dp"
             app:rippleColor="@color/white" />
@@ -186,14 +186,14 @@
             android:hapticFeedbackEnabled="true"
             android:src="@drawable/action_item_icon_background"
             android:tag="@color/kb_magenta"
-            android:tint="@color/kb_magenta"
-            app:backgroundTint="@color/kb_magenta"
+            android:tint="@color/grey"
+            app:backgroundTint="@color/grey"
             app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="@+id/button3"
             app:layout_constraintEnd_toEndOf="@+id/button3"
             app:layout_constraintHorizontal_bias="0.52"
-            app:layout_constraintStart_toStartOf="@+id/button12"
-            app:layout_constraintTop_toTopOf="@+id/button12"
+            app:layout_constraintStart_toStartOf="@+id/button0"
+            app:layout_constraintTop_toTopOf="@+id/button0"
             app:layout_constraintVertical_bias="0.0"
             app:pressedTranslationZ="12dp"
             app:rippleColor="@color/white" />
@@ -250,14 +250,14 @@
             android:hapticFeedbackEnabled="true"
             android:src="@drawable/action_item_icon_background"
             android:tag="@color/kb_red"
-            android:tint="@color/kb_red"
-            app:backgroundTint="@color/kb_red"
+            android:tint="@color/grey"
+            app:backgroundTint="@color/grey"
             app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="@+id/button9"
-            app:layout_constraintEnd_toEndOf="@+id/button12"
+            app:layout_constraintEnd_toEndOf="@+id/button0"
             app:layout_constraintHorizontal_bias="0.48"
             app:layout_constraintStart_toStartOf="@+id/button9"
-            app:layout_constraintTop_toTopOf="@+id/button12"
+            app:layout_constraintTop_toTopOf="@+id/button0"
             app:layout_constraintVertical_bias="0.0"
             app:pressedTranslationZ="12dp"
             app:rippleColor="@color/white" />
@@ -374,10 +374,10 @@
             app:backgroundTint="@color/grey"
             app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="@+id/button9"
-            app:layout_constraintEnd_toEndOf="@+id/button12"
+            app:layout_constraintEnd_toEndOf="@+id/button0"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/button9"
-            app:layout_constraintTop_toTopOf="@+id/button12"
+            app:layout_constraintTop_toTopOf="@+id/button0"
             app:layout_constraintVertical_bias="0.48000002"
             app:pressedTranslationZ="12dp"
             app:rippleColor="@color/white" />
