--- a/android/BladeBLEWear/app/src/main/res/layout/activity_main.xml
+++ b/android/BladeBLEWear/app/src/main/res/layout/activity_main.xml
@@ -92,6 +92,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:hapticFeedbackEnabled="true"
+                android:onClick="resetButtonAction"
                 android:src="@drawable/ic_settings_backup_restore_black_24dp"
                 android:tag="editColorButton"
                 android:tint="@color/white"
